--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <body>
         <h1>えだまめ</h1>
         <p>美味しい</p>
-        <img src="images/ダウンロード.jpeg" alt="えだまめ">
+        <img src="ダウンロード.jpeg" alt="えだまめ">
     </body>
 </html>
